# pli-lcdskin

./: Makefile.am  README.md  configure.ac  configure.ac~
skins/: Makefile.am
skins/display220x176/: Makefile.am
skins/display220x176/LCDSkin_1/: skin_display.xml
skins/display220x176/LCDSkin_10/: skin_display.xml
skins/display220x176/LCDSkin_2/: skin_display.xml
skins/display220x176/LCDSkin_3/: skin_display.xml
skins/display220x176/LCDSkin_4/: skin_display.xml
skins/display220x176/LCDSkin_5/: skin_display.xml
skins/display220x176/LCDSkin_6/: skin_display.xml
skins/display220x176/LCDSkin_7/: skin_display.xml
skins/display220x176/LCDSkin_8/: skin_display.xml
skins/display220x176/LCDSkin_9/: skin_display.xml
skins/display390x240/: Makefile.am
skins/display390x240/LCDSkin_10/: skin_display.xml
skins/display390x240/LCDSkin_11/: skin_display.xml
skins/display390x240/LCDSkin_12/: skin_display.xml
skins/display390x240/LCDSkin_2/: skin_display.xml
skins/display390x240/LCDSkin_5/: skin_display.xml
skins/display390x240/LCDSkin_6/: skin_display.xml
skins/display390x240/LCDSkin_7/: skin_display.xml
skins/display390x240/LCDSkin_8/: skin_display.xml
skins/display390x240/LCDSkin_9/: skin_display.xml
skins/display400x240/: Makefile.am
skins/display400x240/LCDSkin_10/: Makefile.am  skin_display.xml
skins/display400x240/LCDSkin_11/: skin_display.xml
skins/display400x240/LCDSkin_12/: skin_display.xml
skins/display480x320/: Makefile.am
skins/display720x546/: Makefile.am
skins/display800x480/: Makefile.am
(+120 files in other folders)
